# safe_calc

./: .cpmconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: build-and-test.yml  cmake-build-and-test.yml  cmake-multi-platform.yml
cmake/: safe_calcConfig.cmake.in
include/: safe_calc.h
src/: CMakeLists.txt  main.c  safe_calc.c
tests/: CMakeLists.txt  test_safe_calc.c
