# ==============================================================================
# safe_calc - 项目单元测试主 CMake 脚本
# ==============================================================================
# 职责：测试可执行文件的构建与注册。
# ==============================================================================


# -----------------------------------------------------------------------------
# 变量定义
# -----------------------------------------------------------------------------
# 变量：
#	1. MAIN_LIB_TEST_EXE_TARGET_NAME: 主库的单元测试可执行文件的目标名称。
# -----------------------------------------------------------------------------
set(MAIN_LIB_TEST_EXE_TARGET_NAME test_${MAIN_LIB_TARGET_NAME})


# -----------------------------------------------------------------------------
# 构建测试可执行文件
# -----------------------------------------------------------------------------
add_executable(${MAIN_LIB_TEST_EXE_TARGET_NAME} ${MAIN_LIB_TEST_EXE_TARGET_NAME}.c)
target_link_libraries(${MAIN_LIB_TEST_EXE_TARGET_NAME} PRIVATE ${MAIN_LIB_TARGET_NAME})


# -----------------------------------------------------------------------------
# 注册测试可执行文件（注册到 CTest）
# -----------------------------------------------------------------------------
add_test(
	NAME ${MAIN_LIB_TEST_EXE_TARGET_NAME}
	COMMAND ${MAIN_LIB_TEST_EXE_TARGET_NAME}
)
